2003-11-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: If we need alloca, then also include it in LIBGLOB.

2003-11-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Preserve CFLAGS and CXXFLAGS before doing anything.
	Maybe add -Wshadow to CFLAGS and CXXFLAGS.

2003-10-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs/octave-mod.el (octave-comment-start): Simplify.
	(octave-point): Remove.
	(octave-in-comment-p, octave-in-string-p)
	(octave-not-in-string-or-comment-p, calculate-octave-indent)
	(octave-blink-matching-block-open, octave-auto-fill):
	Use line-(beginning|end)-position instead.

2003-10-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-inf.el (inferior-octave-prompt): Don't bother
	matching "octave.bin".

2003-10-29  Lute Kamstra  <lute@gnu.org>

	* emacs/octave-inf.el (inferior-octave-prompt): Recognize
	version number in prompt.

2003-10-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-mode-syntax-table): Allow % to be a
	comment character.

2003-10-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (AWK): Substitute and export it.
	* configure.in: Also check for AWK.

2003-10-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_PREREQ): Require 2.57.

2003-09-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AH_BOTTOM): Don't define HEAVYWEIGHT_INDEXING here.

2003-07-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-variables): Delete
	propagate_empty_matrices from the list.

	* ck-oct-fcns.m: Delete.

2003-07-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Warn if --enable-dl but not --enable-shared.

2003-07-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-variables): Delete
	default_return_value and define_all_return_values from the list.
	Add warn_undefined_return_values to the list.

2003-07-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-variables):