@@ -29,7 +29,7 @@ EXTERN_CFLAGS="$CFLAGS"
 EXTERN_CXXFLAGS="$CXXFLAGS"
 
 AC_INIT
-AC_REVISION($Revision: 1.439 $)
+AC_REVISION($Revision: 1.440 $)
 AC_PREREQ(2.57)
 AC_CONFIG_SRCDIR([src/octave.cc])
 AC_CONFIG_HEADER(config.h)
@@ -1286,13 +1286,21 @@ AC_SUBST(UGLY_DEFS)
 ### done feature testing. 
 
 if test -z "$EXTERN_CFLAGS"; then
-  OCTAVE_CC_FLAG(-Wall)
-  OCTAVE_CC_FLAG(-Wshadow)
+  OCTAVE_CC_FLAG(-Wall, [
+	WARN_CFLAGS="$WARN_CFLAGS -Wall";
+	AC_MSG_RESULT([adding -Wall to WARN_CFLAGS])])
+  OCTAVE_CC_FLAG(-Wshadow, [
+	WARN_CFLAGS="$WARN_CFLAGS -Wshadow";
+	AC_MSG_RESULT([adding -Wshadow to WARN_CFLAGS])])
 fi
 
 if test -z "$EXTERN_CXXFLAGS"; then
-  OCTAVE_CXX_FLAG(-Wall)
-  OCTAVE_CXX_FLAG(-Wshadow)
+  OCTAVE_CXX_FLAG(-Wall, [
+    WARN_CXXFLAGS="$WARN_CXXFLAGS -Wall";
+    AC_MSG_RESULT([adding -Wall to WARN_CXXFLAGS])])
+  OCTAVE_CXX_FLAG(-Wshadow, [
+    WARN_CXXFLAGS="$WARN_CXXFLAGS -Wshadow";
+    AC_MSG_RESULT([adding -Wshadow to WARN_CXXFLAGS])])
 fi
 
 ### Someday, maybe include -ansi and even -pedantic in this list...
@@ -1310,15 +1318,22 @@ AC_ARG_ENABLE(picky-flags,
    elif test "$enableval" = yes; then
      if test -z "$EXTERN_CFLAGS"; then
        for flag in $GCC_PICKY_FLAGS; do
-	 OCTAVE_CC_FLAG($flag)
+	 OCTAVE_CC_FLAG($flag, [
+	   WARN_CFLAGS="$WARN_CFLAGS $flag";
+	   AC_MSG_RESULT([adding $flag to WARN_CFLAGS])])
        done
      fi
      if test -z "$EXTERN_CXXFLAGS"; then
        for flag in $GXX_PICKY_FLAGS; do
-	 OCTAVE_CXX_FLAG($flag)
+	 OCTAVE_CXX_FLAG($flag, [
+	   WARN_CXXFLAGS="$WARN_CXXFLAGS $flag";
+	   AC_MSG_RESULT([adding $flag to WARN_CXXFLAGS])])
        done
      fi
    fi], [])
+
+AC_SUBST(WARN_CFLAGS)
+AC_SUBST(WARN_CXXFLAGS)
 
 ### Run configure in subdirectories.
 
@@ -1466,8 +1481,8 @@ Octave is now configured for $canonical_host_type
 
   Source directory:     $srcdir
   Installation prefix:  $prefix
-  C compiler:           $CC $XTRA_CFLAGS $CFLAGS
-  C++ compiler:         $CXX $XTRA_CXXFLAGS $CXXFLAGS
+  C compiler:           $CC $XTRA_CFLAGS $WARN_CFLAGS $CFLAGS
+  C++ compiler:         $CXX $XTRA_CXXFLAGS $WARN_CXXFLAGS $CXXFLAGS
   Fortran compiler:     $FORT
   Fortran libraries:    $FLIBS
   BLAS libraries:       $BLAS_LIBS
