@@ -45,7 +45,8 @@ FITNESS FOR A PARTICULAR PURPOSE."
 For more information, visit http://www.octave.org/help-wanted.html"
 
 #define OCTAVE_BUGS_STATEMENT \
-  "Report bugs to <bug-octave@bevo.che.wisc.edu>."
+  "Report bugs to <bug-octave@bevo.che.wisc.edu> (but first, please read\n\
+http://www.octave.org/bugs.html to learn how to write a helpful report)."
 
 #define OCTAVE_NAME_VERSION_AND_COPYRIGHT \
   OCTAVE_NAME_AND_VERSION ".\n" \
