@@ -1,3 +1,13 @@
+2003-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* Makeconf.in (WARN_CFLAGS, WARN_CXXFLAGS): Substitute them.
+	(ALL_CFLAGS, BUG_CFLAGS): Add $(WARN_CFLAGS).
+	(ALL_CXXFLAGS, BUG_CXXFLAGS): Add $(WARN_CXXFLAGS).
+	(UGLY_ALL_CXXFLAGS): Delete.
+
+	* configure.in: Add -Wall and -Wshadow to WARN_CFLAGS and
+	WARN_CXXFLAGS instead of CFLAGS and CXXFLAGS.
+
 2003-11-12  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* configure.in: If we need alloca, then also include it in LIBGLOB.
